syntax = "proto3";

option go_package = "github.com/essayZW/hpcmanager/proto";
package publicproto;

// PingResponse ping消息的回复,一般内容为pong
message PingResponse {
    string Msg = 1;
    string Ip = 2;
    string RequestId = 3;
}

